Alteraçoes no style

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <!DOCTYPE html>
 <html lang="PT-BR>
 <meta charset= "utf-8">
-<headder>
+
+<header>
 <link rel="stylesheet" type="text/css"  href="style.css">
-<title> Lessons Learned </title>
 <div id="cabecalho">
-    <h1 id="titulo">Título </h1>
+    <h1 id="titulo">The First Project </h1>
     <nav id="botoes"> LinkedIn Instagram GitHub</nav>
+    <title> Lessons Learned </title>
 </div>
 </header>  
+
 <body class="body">
-    <img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho">
-<div>
-<ul id="licoes_aprendidas"> 
+    <img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho" width="350px">
+<div class="aprender">
+<ol id="licoes_aprendidas"> 
+    <h2>O que eu já aprendi !</h2>
     <li>Unix </li>
     <li>Bash</li>
     <li>Html</li>
@@ -24,8 +27,9 @@
    <li>GitHub</li> 
    <li>Slack</li>
  <li>O jeito tryber de ser</li> 
-
- <ul>
+</ol>
+ <ul id="licoes">
+     <h2>O que eu vou aprender?</h2>
     <li>Java</li>
     <li>JavaScript</li>
     <li>React</li>
@@ -37,15 +41,11 @@
    <li>Flexbox</li>
  <li>JavaScript ES6</li>   
  </ul> 
-</ul>
+
 </div>
-<div id="article">
-<article> O sonho começou tem um tempo, pesquisava a profissão sem saber muito bem o que era e passei a perguntar para amigos mais próximos, como era a rotina de um DEV? 
-    Gostei muito do que ouvi e vi. Decidi correr atrás. Pesquisei muito e encontrei a Trybe. Uma escola de desenvolvimento web. O questionamento comum era: "Será que eu consigo?".
-    Fiz o curso preparatório, estudei e me dediquei muito, o teste não foi fácil, mas consegui passar. Depois veio a entrevista, precisei fazer no meu ambiente de trabalho mesmo, fiquei nervoso
-    mas deu tudo certo.
-    Hoje, me sinto lisonjeado por estar aqui, não tendo 30 dias de curso e já estando com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
-    Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. É muito gratificante pode estar aqui e aprender tudo isso tão rápido e de uma forma tão fixa. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
+<div class="text" id="article">
+<article> Me sinto lisonjeado por estar aqui, não tendo 30 dias de curso e já estando com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
+    Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
     vocês são a parte fundamental para isso aqui tudo estar acontecendo #VQV! 
     <hr>
 </article>
@@ -57,8 +57,5 @@
 
 </div>
 <footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a Trybe    </footer>
-
-
-
 
 </body>
