--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Expectativas para o futuro</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos non sed tempora voluptatem asperiores,
-                    quod fugiat dolor perspiciatis, porro quae tempore.
+                    quod fugiat dolor perspiciatis, porro quae tempores.
                 </p>
             </aside>
         </section>
