--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </ul>
   </nav>
   
-  <article id="artigo">
+  <article id="artigo" class="lado-esquerdo">
     <h2>Sobre meu aprendizado</h3>
     <p>Iniciei minha jornada na Trybe através do processo seletivo e do curso introdutório chamado Primeiros Passos na Programação onde pude ver o básico do JavaScript e aprender sobre lógica de programação. Após iniciar de fato no curso já aprendi diversos conteúdos, o mais importante é que sigo sendo estimulado pela Trybe a ir além do conteúdo apresentado e aprender a aprender. Não tem sido uma caminhada tranquila, pois tudo é muito novo e complexo, mas muito gratificante de continuar avançando.</p>
   </article>
 
-  <aside>
+  <aside class="lado-direito">
     <p>Não é fácil, mas é recompensador. Desde que iniciei minha jornada na Trybe coloquei o meu aprendizado como principal prioridade e tenho me entregado a cada dia para conseguir absorver o conteúdo proposto.</p>
   </aside>
   <section>
