--- a/index.html
+++ b/index.html
@@ -33,34 +33,42 @@
 
     <main>
       <section>
-        <h1>Algumas lições aprendidas neste começo de Trybe</h1>
-        <ol id="licoes_aprendidas">
-          <li>Unix e SO's que o usam como base.</li>
-          <li>Como o Hardware se comunica com o Software através do Kernel.</li>
-          <li>Versionar arquivos usando o Git.</li>
-          <li>Usar um repositório remoto, no caso, GitHub.</li>
-          <li>O funcionamento da Internet como um todo.</li>
-          <li>Estruturar uma página em HTML.</li>
-          <li>Estilizar uma página usando o CSS.</li>
-          <li>Usar o HTML Semântico e seus benefícios.</li>
-          <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
-          <li>Saber expressar minhas opiniões em equipe.</li>
-        </ol>
-      </section>
-      <section>
-        <h1>Lições que desejo aprender ao longo do curso</h1>
-        <ul id="licoes_a_aprender">
-          <li>JavaScript e React para desenvolvimento Front-end.</li>
-          <li>Aprender e melhorar mais a minha inteligência emocional.</li>
-          <li>NodeJS e MongoDB para desenvolvimento Back-end.</li>
-          <li>Trabalhar de forma mais eficiente.</li>
-          <li>Metodologias Ágeis, como Scrum e Kanban.</li>
-          <li>Me tornar um líder melhor.</li>
-          <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
-          <li>Aprender a organizar melhor meu tempo.</li>
-          <li>Construir códigos mais limpos e organizados.</li>
-          <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
-        </ul>
+        <table class="lessons">
+          <tr>
+            <td>
+              <h1>Algumas lições aprendidas neste começo de Trybe</h1>
+              <ol id="licoes_aprendidas">
+                <li>Unix e SO's que o usam como base.</li>
+                <li>Como o Hardware se comunica com o Software através do Kernel.</li>
+                <li>Versionar arquivos usando o Git.</li>
+                <li>Usar um repositório remoto, no caso, GitHub.</li>
+                <li>O funcionamento da Internet como um todo.</li>
+                <li>Estruturar uma página em HTML.</li>
+                <li>Estilizar uma página usando o CSS.</li>
+                <li>Usar o HTML Semântico e seus benefícios.</li>
+                <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
+                <li>Saber expressar minhas opiniões em equipe.</li>
+              </ol>
+            </td>  
+          </tr>
+          <tr>
+            <td>
+              <h1>Lições que desejo aprender ao longo do curso</h1>
+              <ul id="licoes_a_aprender">
+                <li>JavaScript e React para desenvolvimento Front-end.</li>
+                <li>Aprender e melhorar mais a minha inteligência emocional.</li>
+                <li>NodeJS e MongoDB para desenvolvimento Back-end.</li>
+                <li>Trabalhar de forma mais eficiente.</li>
+                <li>Metodologias Ágeis, como Scrum e Kanban.</li>
+                <li>Me tornar um líder melhor.</li>
+                <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
+                <li>Aprender a organizar melhor meu tempo.</li>
+                <li>Construir códigos mais limpos e organizados.</li>
+                <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
       </section>
 
       <article>
