--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300;1,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -22,48 +26,49 @@
       <a href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
     </div>
   </header>
-
-  <ol id="licoes_aprendidas">
-    <li>Git</li>
-    <li>GitHub</li>
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Slack</li>
-    <li>Zoom</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Shell</li>
-    <li>Fundamentos do Desenvolvimento Web</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <li>Java Script</li>
-    <li>Array e Loop</li>
-    <li>Logica de programação</li>
-    <li>Objetos e Funções</li>
-    <li>DOM e seletores</li>
-    <li>Web Storage</li>
-    <li>Forms</li>
-    <li>Css Flexbox</li>
-    <li>Jest</li>
-    <li>React</li>
-    <li>SQL</li>
-  </ul>
-  <article>
+  <nav>
+    <ol id="licoes_aprendidas">
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Unix</li>
+      <li>Bash</li>
+      <li>Slack</li>
+      <li>Zoom</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Shell</li>
+      <li>Fundamentos do Desenvolvimento Web</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>Java Script</li>
+      <li>Array e Loop</li>
+      <li>Logica de programação</li>
+      <li>Objetos e Funções</li>
+      <li>DOM e seletores</li>
+      <li>Web Storage</li>
+      <li>Forms</li>
+      <li>Css Flexbox</li>
+      <li>Jest</li>
+      <li>React</li>
+      <li>SQL</li>
+    </ul>
+  </nav>
+  <article id="lado-esquerdo">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
-    molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit.
-  </article>
-  <section>
-    <aside>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
-      consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
-      asperiores?
-    </aside>
-  </section>
-  <footer id="rodape">
-    <h2>
-      Matheus Moura
-    </h2>
-  </footer>
+    molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit Lorem ipsum dolor sit
+    amet consectetur adipisicing elit. Ab, nobis, tenetur earu
+    <section>
+      <aside id="lado direito">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
+        consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
+        asperiores?
+      </aside>
+    </section>
+    <footer id="rodape">
+      <h2>
+        Matheus Moura
+      </h2>
+    </footer>
 </body>
 
 </html>
