--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
           estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia.
     </article>
-    <section><aside>Logo que cheguei tive dificuldades com o site github,<br>
+    <section class="margem"><aside>Logo que cheguei tive dificuldades com o site github,<br>
          ainda estou me adaptando a ele, além de aprender git e github, aprendi<br>
           como funciona a internet, como estruturar uma pagina com html e<br>
            como estilizá-la com css.</aside></section>
