--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <main>
     <figure><img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo"></figure>
 
-    <section>
+    <section class="licoes a_direita">
+      <p>Lições Aprendidas:</p>
       <ol id="licoes_aprendidas">
         <li>Git e Github</li>
         <li>Comandos Git</li>
@@ -33,7 +34,10 @@
         <li>HTML Semântico</li>
         <li>Requisições Web</li>
       </ol>
+    </section>
 
+    <section class="licoes">
+      <p>Lições a Aprender:</p>
       <ul id="licoes_a_aprender">
         <li>Javascript</li>
         <li>NodeJS</li>
@@ -49,10 +53,8 @@
     </section>
 
     <article>
-      <section>
-        <h2>Meu aprendizado</h2>
-      <p>Na Trybe, todo conhecimento é lucro! As coisa que aprendo, as formas como aprendo, as pessoas que me instruem... tudo tem sido muito satisfatório. A confiança e a certeza de que o meu dinheiro foi bem investido vem aumentando com o tempo que eu invisto aprendendo o que eles passam e conhecendo novas pessoas, que também é essencial para minha formação como desenvolvedor. Espero aprender ainda muito mais sobre as diversas tecnologias que eles ensinam, e sair formado trabalhando no meu sonho: ser um Desenvolvedor!</p>
-      </section>   
+      <h2>Meu aprendizado</h2>
+      <p>Na Trybe, todo conhecimento é lucro! As coisa que aprendo, as formas como aprendo, as pessoas que me instruem... tudo tem sido muito satisfatório. A confiança e a certeza de que o meu dinheiro foi bem investido vem aumentando com o tempo que eu invisto aprendendo o que eles passam e conhecendo novas pessoas, que também é essencial para minha formação como desenvolvedor. Espero aprender ainda muito mais sobre as diversas tecnologias que eles ensinam, e sair formado trabalhando no meu sonho: ser um Desenvolvedor!</p>   
     </article>
 
     <aside>
