mudancas na imagem

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Lições aprendidas</title>
+    <title>Lições aprendidas - Trybe</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <header id="cabecalho">
 <h1 id="titulo">Lições</h1>
       </header>
-    <img src="rsz_foto1.jpg" id="minha_foto">
+    <img src="rsz_foto1.jpg" id="minha_foto" alt="Imagem conhecimento entrando na cabeça">
     <section>
     <ol id="licoes_aprendidas"> 
         <h2>Lições aprendidas</h2>
@@ -46,9 +46,9 @@
       <p>Nestas ultimas 3 semanas na Trybe pude aprender um pouco de html, css e também sobre git e github. Além disso, já aprendi também um pouco sobre softs skills e sua importância no mercado de trabalho. Não tinha contato com programação antes, então ver minha evolução me anima e me deixa cada vez mais certa de que estar na Trybe foi a melhor escolha que fiz para minha vida profissional. </p>
   </article>
  <section>
-  <p>Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios, e agora no projeto.</p>
+  <p>Estudar na Trybe</p>
 </aside>
-Estudar na Trybe
+Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios.
 <aside>
   </section>
 
