--- a/index.html
+++ b/index.html
@@ -6,50 +6,75 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <header>
-        <nav id="cabecalho">
-          <a href="index.html">Home</a>
-          <a href="https://www.linkedin.com/in/victorschlichting/" target="_blank">Contato</a>
-        </nav>         
+    <header>
+      <nav id="cabecalho">
         <h1 id="titulo">Project Lessons Learned - Victor Hugo Baum Schlichting</h1>
-        </header>
-      <main>
-        <aside>
-          <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
-        </aside>
-        <article id="aprendizado">
-          <h2>Meu aprendizado</h2>
-          <p>Meu estudo na Trybe se iniciou com o Unix, aprendi que ele é a base para conseguir ser um bom profissional e atuar na área de desenvolvimento. Passei por Git e Github entendendo seu processo e uso para projetos com grandes equipes e como ele pode salvar a sua pele caso cometa algum erro. Atualmente estou na etapa de HTML e CSS, e este projeto tem o objetivo de testar meu conhecimento adquirido até aqui.</p>
-        </article>
-        <ol id="licoes_aprendidas">
-          <h2>Lições aprendidas:</h2>
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Markdown</li>
-            <li>Internet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>CSS Seletores e Posicionamento</li>
-            <li>HTML Semântico</li>
-          </ol>
-          <ul id="licoes_a_aprender">
-            <h2>Lições que desejo aprender:</h2>
-            <li>JavaScript</li>
-            <li>DOM (Document Object Model)</li>
-            <li>React</li>
-            <li>Redux</li>
-            <li>API's</li>
-            <li>SQL</li>
-            <li>Banco de Dados</li>
-            <li>MongoDB</li>
-            <li>NodeJS</li>
-            <li>Phyton</li>
-            </ul>
-      </main>
-      <footer id="rodape">
-        <p>Rodapé</p>
-      </footer>
+        <a href="index.html">Home</a>
+        <a href="https://www.linkedin.com/in/victorschlichting/" target="_blank">LinkedIn new window</a>
+      </nav>         
+    </header>
+    <main>
+      <aside>
+        <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
+        <section id="breve_licao">
+          <h2>Uma lição para ser levada</h2>
+          <p>O fato de ter que sair do Windows, plataforma que utilizei a vida toda, me fez ver que sair da zona de conforto e ter novas experiências pode ser recompensador, principalmente se aplicado de forma educativa.</p>
+        </section>
+      </aside>
+      <article id="aprendizado">
+        <h2>Meu aprendizado</h2>
+        <p>Meu estudo na Trybe se iniciou com o Unix, aprendi que ele é a base para conseguir ser um bom profissional e atuar na área de desenvolvimento. Passei por Git e Github entendendo seu processo e uso para projetos com grandes equipes e como ele pode salvar a sua pele caso cometa algum erro. Atualmente estou na etapa de HTML e CSS, e este projeto tem o objetivo de testar meu conhecimento adquirido até aqui.</p>
+      </article>
+      
+      <ol id="licoes_aprendidas">
+        <h2>Lições aprendidas:</h2>
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Markdown</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>CSS Seletores e Posicionamento</li>
+        <li>HTML Semântico</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <h2>Lições que desejo aprender:</h2>
+        <li>JavaScript</li>
+        <li>DOM (Document Object Model)</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>API's</li>
+        <li>SQL</li>
+        <li>Banco de Dados</li>
+        <li>MongoDB</li>
+        <li>NodeJS</li>
+        <li>Phyton</li>
+      </ul>
+      <section id="tabela">
+        <table>
+          <tr>
+            <td>Blocos</td>
+            <td>Concluídos</td>
+          </tr>
+          <tr>
+            <td>Bloco 01</td>
+            <td>&#x2705</td>
+          </tr>
+          <tr>
+            <td>Bloco 02</td>
+            <td>&#x2705</td>
+          </tr>
+          <tr>
+            <td>Bloco 03</td>
+            <td>&#x2705</td>
+          </tr>
+        </table>
+      </section>
+    </main>
+    <footer id="rodape">
+      <p>Rodapé</p>
+    </footer>
   </body>
 </html>
