--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <td>Html e Css</td>
         </tr>
     </table>
-    <article class="margem" id="meu_aprendizado">
+    <article class="lado-esquerdo" class="margem" id="meu_aprendizado">
         Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
         meu irmão que trabalha com ciência de dados já havia me falado dela. Quando passei a ter um contato real com a escola pude encontrar<br>
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
           estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia.
     </article>
-    <section class="margem"><aside>Logo que cheguei tive dificuldades com o site github,<br>
+    <section class="lado-direito" class="margem"><aside>Logo que cheguei tive dificuldades com o site github,<br>
          ainda estou me adaptando a ele, além de aprender git e github, aprendi<br>
           como funciona a internet, como estruturar uma pagina com html e<br>
            como estilizá-la com css.</aside></section>
