--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div>
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
     </div>
-    <div id="links">
-      <a href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
-    </div>
+
+    <a href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
+
   </header>
   <nav>
     <ol id="licoes_aprendidas">
@@ -50,13 +50,13 @@
       <li>Css Flexbox</li>
       <li>Jest</li>
       <li>React</li>
-      <li>SQL</li>
     </ul>
+
   </nav>
   <article id="lado-esquerdo">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
     molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit Lorem ipsum dolor sit
-    amet consectetur adipisicing elit. Ab, nobis, tenetur earu
+    amet consectetur adipisicing elit. Ab, nobis, tenetur earuas
     <section>
       <aside id="lado direito">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
