--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div id="bloco-da-imagem"> 
                 <img id="minha_foto" src="perfil.jpg" alt="">
             </div>
-            <h2 id="titulo_das_listas">lições aprendidas</h2>
+        </div>    
+        <div id="listas"> 
+            <h2 id="titulo_das_listas">lições:</h2>
             <ol id="licoes_aprendidas">
                 <li>Profissionalismo;</li>
                 <li>Empatia;</li>
@@ -27,7 +29,36 @@
                 <li>Zoom</li>
                 <li>Slack</li>
                 <li>Semantic html</li>
+            </ol>
+
+            <ul id = "licoes_a_aprender">
+                <li>JavaScript;</li>
+                <li>DOM</li>
+                <li>Forms;</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>unit tests</li>
+                <li>React</li>
+                <li>NODE</li>
+                <li>SQL/li>
+            </ul>
+        <div id ="Artigos">
+            <article>
+                Estudar na Trybe têm se mostrado uma das experiências mais proveitosas e desafiadoras 
+                que tive o prazer de fazer parte. dentro do curto prazo de duas semanas e alguns dias, 
+                sinto que já aprendi mais que na minha vida inteira, estou me tornando mais adequado ao
+                trabalho estou me dispondo a performar nos ambientes de trabalho.
+            </article>
+            <aside>
+                <section>
+                    Nunca antecipei que o método ativo de aprendizado empregado no curso da Trybe seria
+                    tão eficiente pra mim
+                </section>
+            </aside>
         </div>
-        </ol>
+        </div>
+        <a href="https://github.com/tryber/sd-016-b-project-lessons-learned" target="_blank">link externo</a>
+        <footer id="rodape">rodape</footer>
     </body>
 </html>
