--- a/index.html
+++ b/index.html
@@ -56,39 +56,41 @@
 
         <section id="skills">
             <div class="container">
-                <div>
+                <div id="skill_title">
                     <h3>Skills</h3>
-                </div>                
-                <section>
-                    <ol id="licoes_aprendidas">
-                        <li>Unix & Bash</li>
-                        <li>GIT</li>
-                        <li>GitHub</li>
-                        <li>Web Work-flow</li>
-                        <li>HTTP Protocols</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Semantic HTML</li>
-                        <li>Python</li>
-                        <li>JavaScript</li>
-                    </ol>
-                </section>
-    
-                <section>
-                    <h4>Not-Learned</h4>
-                    <ul id="licoes_a_aprender">
-                        <li>Web-responsivity</li>
-                        <li>Jest.js</li>
-                        <li>React.js</li>
-                        <li>Redux.js</li>
-                        <li>Agile Methodology</li>
-                        <li>Node.js</li>
-                        <li>Express.js</li>
-                        <li>MySQL</li>
-                        <li>MongoDB</li>
-                        <li>Socket</li>
-                    </ul>
-                </section>
+                </div>  
+                <div class="sec_skills">              
+                    <section>
+                        <ol id="licoes_aprendidas">
+                            <li>Unix & Bash</li>
+                            <li>GIT</li>
+                            <li>GitHub</li>
+                            <li>Web Work-flow</li>
+                            <li>HTTP Protocols</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Semantic HTML</li>
+                            <li>Python</li>
+                            <li>JavaScript</li>
+                        </ol>
+                    </section>
+        
+                    <section>
+                        <h4>Not-Learned</h4>
+                        <ul id="licoes_a_aprender">
+                            <li>Web-responsivity</li>
+                            <li>Jest.js</li>
+                            <li>React.js</li>
+                            <li>Redux.js</li>
+                            <li>Agile Methodology</li>
+                            <li>Node.js</li>
+                            <li>Express.js</li>
+                            <li>MySQL</li>
+                            <li>MongoDB</li>
+                            <li>Socket</li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </section>
 
