--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <td>Html e Css</td>
         </tr>
     </table>
-    <article class="lado-esquerdo" class="margem" id="meu_aprendizado">
+    <article class="lado-esquerdo" class="margem">
         Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
         meu irmão que trabalha com ciência de dados já havia me falado dela. Quando passei a ter um contato real com a escola pude encontrar<br>
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
