requisito08 - crie um artigo sobre seu aprendizado

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <li>HOF</li>
       <li>Unit Tests</li>
     </ul>
+    <article>
+      Em menos de 1 mês estou apredendo o que provavelmente demoraria 3 se fosse por conta <br>
+      própria.
+    </article>
     </main>
     <section>
     <nav><a target="_blank" href="https://www.linkedin.com/in/gabriel-augustoo/">Linkedin</a></nav>
