correção dos últimos erros no lint

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
       <ul class="link">
-        <li>Home</li>
+        <li><a href="#rodape">Home</a></li>
         <li><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin Pessoal</a></li>
       </ul>
     </nav>
