--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8"/>
-    <title>Portifolio de Lições</title>
-    <link rel="stylesheet" href="style.css">
+ <meta charset="UTF-8"/>
+  <title>Portifolio de Lições</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div> 
-    <header id= "cabecalho">
-        <h1 id="titulo"> Portifolio de lições aprendidas!</h1>
-    </header>
-  </div> 
-  <div>
-          <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de perfil Hugo Maximiano"> 
-  </div> 
 
-  <section id="licoes">
+<body>
+ <div> 
+  <header id= "cabecalho">
+   <h1 id="titulo"> Portifolio de lições aprendidas!</h1>
+  </header>
+ </div>
+
+ <div>
+  <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de perfil Hugo Maximiano"> 
+ </div> 
+
+ <section id="licoes">
   <div>
-      <h2>
-        <ol id="licoes_aprendidas">
-          <li>Fundamentos do desenvolvimento</li>
-          <li> Introdução Unix e Shell</li>
-          <li>Unix</li>
-          <li>Bash</li>
-          <li>Para que serve GIT</li>
-          <li>GitHub</li>
-          <li>Como a Internet funciona</li>
-          <li>Introdução HTML e CSS</li>
-          <li>HTML</li>
-          <li>CSS</li>
-        </ol>  
-       </h2>
-  </div> 
+   <h2>
+    <ol id="licoes_aprendidas">
+     <li>Fundamentos do desenvolvimento</li>
+     <li> Introdução Unix e Shell</li>
+     <li>Unix</li>
+     <li>Bash</li>
+     <li>Para que serve GIT</li>
+     <li>GitHub</li>
+     <li>Como a Internet funciona</li>
+     <li>Introdução HTML e CSS</li>
+     <li>HTML</li>
+     <li>CSS</li>
+    </ol>  
+   </h2>
+  </div>
+
   <div>
       <h2>
           <ul id="licoes_a_aprender">
@@ -51,9 +54,9 @@
 </section>
 <section>
     <article>
-        <p>Sempre tive muito facilidade em aprendizagem, e sempre achei bom novos desafios. </p>
+        <p>Sempre tive muita facilidade em aprendizagem, e sempre achei bom ter novos desafios, me entediava com coisas simples. No curso da Trybe tedio não acontece, sempre estou sendo precionado no maximo. A intensidade em que o conteudo é apresentado segue uma velocidade frenetica 200km/h. O que as vezes é bom mas não permite vacilos. Qualquer um cometido tem prejuizos.</p>
     </article>  
-  </section>
+</section>
 <div>
     <footer id="rodape">
       <nav id="links_externos">
