requisito09 - crie uma sessão que conta uma passagem sobre seu aprendizado

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       Em menos de 1 mês estou apredendo o que provavelmente demoraria 3 se fosse por conta <br>
       própria.
     </article>
+    <aside>
+      Dos assuntos abordados até agora, Unix e Css são os que mais tem me interessado.
+    </aside>
     </main>
     <section>
     <nav><a target="_blank" href="https://www.linkedin.com/in/gabriel-augustoo/">Linkedin</a></nav>
