added table reference

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <td headers="html">Semântica</td>
                 <td headers="css">Tipos de Display</td>
             </tr>
+            <!-- Para as tabelas usei esse link da W3 
+            link: https://www.w3.org/TR/WCAG20-TECHS/H43
+            -->
         </table>
     
     <footer id="rodape" target="_blank">Quer saber mais sobre o curso? Clique <a href="https://www.betrybe.com/" alt="site da trybe">aqui</a><span class="conteudo_invisivel">, abre em uma nova guia</span>!</footer>
