--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
      <main>
          <section id= "section_list_1">
-             <h3>Lições</h3>
+             <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -57,14 +57,9 @@
             </p> 
         </article>
         <aside>
-            <h2>Passagem sobre meu aprendizado</h2>
-            <p> Esse curso vem sendo uma das experiências mais desafiadoras da minha, principalmente em relação<br>
-                ao contúdo de html e css. Porém por mais que seja bem desafiador, essa experiências vem sendo muito<br>
-                empolgante também.
-
-            </p>
-
-        </aside>
+            Esse curso vem sendo uma das experiências mais desafiadoras da minha, principalmente em relação ao conteúdo de html e css. Porém por mais que seja bem desafiador, essa experiências vem sendo muito
+            empolgante também, pois tenho adiquirido muito conhecimento.
+            </aside>
         <footer id="rodape">
             Todos direitos reservado, Hugo Daniel.
         </footer>
