--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
     </div>
 
-    <a href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
+    <a class="links" href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
 
   </header>
   <nav>
@@ -56,7 +56,7 @@
   <article id="lado-esquerdo">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
     molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit Lorem ipsum dolor sit
-    amet consectetur adipisicing elit. Ab, nobis, tenetur earuas
+    amet consectetur adipisicing elit. Ab, nobis, tenetur earuas 2312
     <section>
       <aside id="lado direito">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
