--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
+<html lang="bt-br">
 <head>
-    <html lang="bt-br">
-    <title>Lessons Learned</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Lessons Learned</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+      
 </head>
 
 <body>
-   <header id="cabecalho">
-        <h1 id="titulo">/home/amanda/o-que-aprendi-em/ <br> Duas semanas como Tryber!!! </h1>
-    </header> 
+  <header id="cabecalho">
+   <h1 id="titulo">/home/amanda/o-que-aprendi-em/ <br> Duas semanas como Tryber!!! </h1>
+  </header> 
 
-   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
+  <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
+
+  <article>
+   <ol id="licoes_aprendidas"> <h3>Já aprendi:</h3>
+      <li>Conceitos teóricos iniciais de Unix & Shell;</li>
+      <li>Conceitos teóricos iniciais de Unix & Bash;</li>
+      <li>Git & GitHub - teoria e pratica; </li>
+      <li>Funcionamento da internet;</li>
+      <li>Linguagem de marcação HTML;</li>
+      <li>Tags, links internos e externos-HTML;</li>
+      <li>Linguagem CSS;</li>
+      <li>Inline,Block,Inline-block e Box Model - CSS;</li>
+      <li>Seletores e posicionamento - HTML & CSS;</li>
+      <li>HTML Semântico;</li>
+    </ol>
+  </article>
 
 </body>
