tentando corrigir os requisitos 8 e 9

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
       <li>Unit Tests</li>
     </ul>
     <article>
-      Em menos de 1 mês estou apredendo o que provavelmente demoraria 3 se fosse por conta <br>
-      própria.
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.<br> 
+      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,<br> 
+      ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</p> 
     </article>
     <aside>
-      Dos assuntos abordados até agora, Unix e Css são os que mais tem me interessado.
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.<br> 
+      Cum sociis natoque penatibus et magnis dis p</p>
     </aside>
     </main>
     <section>
