--- a/index.html
+++ b/index.html
@@ -76,17 +76,18 @@
 		</table>
 	</section>
 	
-	<article id="aprendizado">
-		<section class="aprendizado">
-			<h2>Aprendizado na Trybe</h2>
-			<p>O meu aprendizado na <strong>Trybe</strong> está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda <strong>estrutura, equipes e conteúdo didático</strong> que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
-		</section>
-	</article>
-
-	<aside>
-		<h2>Mais sobre o aprendizado</h2>
-		<p>Estou realmente aprendendo a <strong>programar, a aprender e a trabalhar</strong>. E isso é apenas o começo de todo conhecimento que vem por aí, não poderia ter escolhido uma escola melhor.</p>
-	</aside>
+	<div class="container-aprendizado">
+		<article id="aprendizado" class="lado-esquerdo">
+			<section class="aprendizado">
+				<h2>Aprendizado na Trybe</h2>
+				<p>O meu aprendizado na <strong>Trybe</strong> está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda <strong>estrutura, equipes e conteúdo didático</strong> que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
+			</section>
+		</article>
+		<aside class="lado-direito">
+			<h2>Mais sobre o aprendizado</h2>
+			<p>Estou realmente aprendendo a <strong>programar, a aprender e a trabalhar</strong>. E isso é apenas o começo de todo conhecimento que vem por aí, não poderia ter escolhido uma escola melhor.</p>
+		</aside>
+	</div>
 	
 
 	<footer id="rodape">
