--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <article class="article">
             <h2 class="alinha-titulo">Meu aprendizado</h2>
             <img id="minha_foto" class="alinha-foto" src="foto.jpg" alt="Foto da programadora.">
-            <p class="limpa">"Quem diria que em apenas duas semanas fossem acontecer tantas transformações na minha vida. Se alguém me falasse que ao entrara na Trybe eu reconheceria a missão e a visão de forma tão acolhedora, e que essa ação me traria paz. Hoje sou uma pessoa melhor, e acredito que esse seja o propósito principal. As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória! Só sei que agora não quero parar. Vamos, que juntos somos mais fortes."</a></p>
+            <p class="limpa">"Quem diria que em apenas duas semanas fossem acontecer tantas transformações na minha vida. Se alguém me falasse que ao entrara na Trybe eu reconheceria a missão e a visão de forma tão acolhedora, e que essa ação me traria paz. As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória!"</a></p>
             <table class="table">
                 <tr>
                     <th>Situação</th>
