--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     
     <div id="cabecalho">
-        <h1 id="titulo">Título</h1>
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </div>
+
+    <img src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
 </body>
 </html>
