--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       </ul>
     </section>
 
-    <article>
+    <article class="lado-esquerdo aprendizado">
       <h2>Meu aprendizado</h2>
       <p>Na Trybe, todo conhecimento é lucro! As coisa que aprendo, as formas como aprendo, as pessoas que me instruem... tudo tem sido muito satisfatório. A confiança e a certeza de que o meu dinheiro foi bem investido vem aumentando com o tempo que eu invisto aprendendo o que eles passam e conhecendo novas pessoas, que também é essencial para minha formação como desenvolvedor. Espero aprender ainda muito mais sobre as diversas tecnologias que eles ensinam, e sair formado trabalhando no meu sonho: ser um Desenvolvedor!</p>   
     </article>
 
-    <aside>
+    <aside class="lado-direito aprendizado">
       <h2>Primeiro Commit</h2>
       <p>Quando aprendi Git e GitHub foi um nó na cabeça! Até conseguir aplicar tudo que li, tive que criar, apagar, e recriar muitos repositórios. Mas com certeza o resultado foi recompensador.</p>
     </aside>  
