Add the personal menu

--- a/index.html
+++ b/index.html
@@ -13,10 +13,29 @@
         <img id="trybe-logo" src="Assets/Images/trybe-logo.png">
       </a>
 
-      <header id="title">
-        <h1>Lições Aprendidas - Trybe!6</h1>
+      <header id="titulo">
+        <h1>Lições Aprendidas - Trybe!</h1>
       </header>
     </header>
-
+    <br>
+    <div class="main">
+      <aside class="profile">
+        <div class="nome">
+          <h2>Marcos Carvalho</h2>
+        </div>
+       
+        <img id="minha_foto" src="Assets/Images/minha_foto.jpg">
+        
+        <nav class="personal-links">
+          <a href="https://www.linkedin.com/in/marcos-carvalho-5bb42bb6/" target="_blank">
+            <h3>Linkedin</h3>
+          </a>
+          <br>
+          <a href="https://github.com/ItsMarcosC" target="_blank">
+            <h3>Github</h3>
+          </a>
+        </nav>
+      </aside>
+    </div>
 </body>
 </html>
