--- a/index.html
+++ b/index.html
@@ -56,14 +56,23 @@
             incluido também projetos.
             </p> 
         </article>
-        <aside>
+        <aside><h2>Passagem</h2>
             Esse curso vem sendo uma das experiências mais desafiadoras da minha, principalmente em relação ao conteúdo de html e css. Porém por mais que seja bem desafiador, essa experiências vem sendo muito
-            empolgante também, pois tenho adiquirido muito conhecimento.
+            empolgante também.
             </aside>
         <footer id="rodape">
             Todos direitos reservado, Hugo Daniel.
         </footer>
         <a href="https://github.com/HugoDaniel2000" target="_blank" id="link">GitHub</a>
+
+        <table>
+            <tr>
+                <td>Nome</td>
+                <td> Módulo</td>
+                <td>bloco</td>
+                <td>dia</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
