--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title id="cabecalho">Rafael Santos | Lessons Learned</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
     <h1 id="titulo">Project Trybe</h1>
     </header>
@@ -19,7 +18,7 @@
     </nav>
     <section>
     <h2>1 -Lições</h2>
-    <ol id="licoes_aprendidas" class="lado_direito">
+    <ol id="licoes_aprendidas" class="lado_esquerdo">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -33,7 +32,7 @@
     </ol>
     </section>
     <section>
-    <ul id="licoes_a_aprender" class="lado_esquerdo">
+    <ul id="licoes_a_aprender" class="lado_direito">
         <li><strong>JavaScript</strong></li>
         <li>DOM</li>
         <li>Web Storage</li>
@@ -47,7 +46,7 @@
     </ul>
     </section>
     <article>
-        <h2>2 - Aprendizado</h2>
+        <h2 class="aprendizado">2 - Aprendizado</h2>
         <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
         aumentando meu conhecimento em desenvolvimento na web e como <br>
         desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
@@ -56,13 +55,13 @@
         na qual eu estou trabalhando naquela empresa.</p>
     </article>
     <aside>
-        <h2>3 -Um Momento que ocorreu durante meu aprendizado</h2>
+        <h2 class="aprendizado">3 -Um Momento que ocorreu durante meu aprendizado</h2>
         <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
     <div>
-    <h2>4 - Périodo de aprendizado do curso</h2>
+    <h2 class="aprendizado">4 - Périodo de aprendizado do curso</h2>
     <table>
         <tr>
             <th>inicio</th>
