--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </main>
 <hr>
   <footer id="rodape">
-    <p>Criado e editado por Samuel Monteiro Gonçalves, 2021</p>
+    <p><em>Criado e editado por Samuel Monteiro Gonçalves, 2021</em></p>
   </footer>
 </body>
 </html>
