--- a/index.html
+++ b/index.html
@@ -22,10 +22,30 @@
     <div>
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
     </div>
-
-    <a class="links" href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
-
+    <nav>
+      <a class="links" href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="_blank">Linkedin </a>
+    </nav>
   </header>
+  <section>
+    <table>
+      <tr>a</tr>
+      <td>b</td>
+      <td>b</td>
+      <tr>a</tr>
+      <tr>a</tr>
+      <td>b</td>
+      <td>b</td>
+      <tr>a</tr>
+      <tr>a</tr>
+      <td>b</td>
+      <td>b</td>
+      <tr>a</tr>
+      <tr>a</tr>
+      <td>b</td>
+      <td>b</td>
+      <tr>a</tr>
+    </table>
+  </section>
   <nav>
     <ol id="licoes_aprendidas">
       <li>Git</li>
@@ -53,22 +73,23 @@
     </ul>
 
   </nav>
-  <article id="lado-esquerdo">
+  <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
     molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit Lorem ipsum dolor sit
     amet consectetur adipisicing elit. Ab, nobis, tenetur earuas 2312
-    <section>
-      <aside id="lado direito">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
-        consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
-        asperiores?
-      </aside>
-    </section>
-    <footer id="rodape">
-      <h2>
-        Matheus Moura
-      </h2>
-    </footer>
+  </article>
+  <section>
+    <aside id="lado direito">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
+      consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
+      asperiores?
+    </aside>
+  </section>
+  <footer id="rodape">
+    <h2>
+      Matheus Moura
+    </h2>
+  </footer>
 </body>
 
 </html>
