--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Lessons Learned</title>
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas na Trybe</h1>
+      <h1 id="titulo">Lições aprendidas na <span class="trybe-green">Trybe</span></h1>
     </header>
     <main>
       <section>
