--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
     <head>
         <meta charset="UFT-8">
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
+        <title>Lessons Learned</title>
     </head>
     <body>
 
         <header id="cabecalho">
-                <h1 id="titulo">Título</h1>
+                <h1 id="titulo">Lessons Learned</h1>
         </header>
 
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
         <br>
+        <article id="artigo">
+            <h2>Texto artigo</h2>
+            <p>O artigo deverá possuir mais de 300 caracteres e menos de 600, além disto deve possuir a tag article.</p>
+        </article>
+        <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <h3>Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
             <li>Item 1</li>
