--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
  <meta charset="UTF-8"/>
-  <title>Portifolio de Lições</title>
+  <title>Portfolio of lessons learned</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  <div> 
   <header id= "cabecalho">
-   <h1 id="titulo"> Portifolio de lições aprendidas!</h1>
+   <h1 id="titulo">Portfolio of lessons learned!</h1>
   </header>
  </div>
 
@@ -21,14 +21,14 @@
   <div>
    <h2>
     <ol id="licoes_aprendidas">
-     <li>Fundamentos do desenvolvimento</li>
-     <li> Introdução Unix e Shell</li>
+     <li>Fundamentals of development</li>
+     <li> Introduction Unix e Shell</li>
      <li>Unix</li>
      <li>Bash</li>
-     <li>Para que serve GIT</li>
+     <li>What GIT is for</li>
      <li>GitHub</li>
-     <li>Como a Internet funciona</li>
-     <li>Introdução HTML e CSS</li>
+     <li>How the internet works</li>
+     <li>Introduction HTML e CSS</li>
      <li>HTML</li>
      <li>CSS</li>
     </ol>  
@@ -52,11 +52,18 @@
       </h2>
   </div>  
 </section>
-<section>
-    <article>
-        <p>Sempre tive muita facilidade em aprendizagem, e sempre achei bom ter novos desafios, me entediava com coisas simples. No curso da Trybe tedio não acontece, sempre estou sendo precionado no maximo. A intensidade em que o conteudo é apresentado segue uma velocidade frenetica 200km/h. O que as vezes é bom mas não permite vacilos. Qualquer um cometido tem prejuizos.</p>
+<section > 
+    <article id="artigo">
+        <p>I've always had a lot of ease in learning, and I always thought it was good to have new challenges, bored with simple things. In the course of Trybe tedio does not happen, I am always being pretended to the maximum. The intensity at which the content is presented follows a frenetic speed 200km/h. Anyone committed has a prejudge.</p>
     </article>  
 </section>
+
+<section>
+  <aside>
+    <p>In the first project within Trybe, I felt like the union of students, together with this method of active teaching helps us to learn quickly. Putting our knowledge into practice in something more concrete as a project gave me the clarity of how much I had already learned!</p>
+  </aside>
+</section>
+
 <div>
     <footer id="rodape">
       <nav id="links_externos">
