Coloquei ID em minha foto

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </div>
 
-    <img src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
+    <img id="minha_foto" src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
 </body>
 </html>
