--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <header id="cabecalho">
-<h1 id="titulo">Lições</h1>
+<h1 id="titulo">Lições - Trybe!</h1>
       </header>
     <img src="rsz_foto1.jpg" id="minha_foto" alt="Imagem conhecimento entrando na cabeça">
     <section>
@@ -51,7 +51,17 @@
 Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios.
 <aside>
   </section>
-
+  <p>Na tabela a seguir constam informações sobre dicas para estudar</p>
+<table> 
+    <tr>
+        <td> Leia todo o material</td>
+        <td>Assista a aula ao vivo</td>
+    </tr>
+    <tr>
+        <td>Faça os exercícios</td>
+        <td>Faça anotações</td>
+     </tr>
+</table>
     <section>
     <footer id="rodape">
         <p>2021, Nathalia</p>
