Alteraçoes em STYLE 2

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" type="text/css"  href="style.css">
 <div id="cabecalho">
     <h1 id="titulo">The First Project </h1>
-    <nav id="botoes"> LinkedIn Instagram GitHub</nav>
     <title> Lessons Learned </title>
 </div>
+<h3 id="botoes"> <a link href="https://www.linkedin.com/in/celsofiorani/" target="_blank">LinkedIn</a> |<a link href="https://www.instagram.com/fioranicelso/" target="_blank">Instagram</a> | <a link href="https://github.com/fioranicelso target=" target="_blank" >GitHub</a></h3>
 </header>  
 
 <body class="body">
@@ -41,21 +41,21 @@
    <li>Flexbox</li>
  <li>JavaScript ES6</li>   
  </ul> 
-
 </div>
+
 <div class="text" id="article">
-<article> Me sinto lisonjeado por estar aqui, não tendo 30 dias de curso e já estando com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
+    <h2> Como é estar na Trybe ?</h2>
+<article> Me sinto lisonjeado por estar aqui, não tenho 30 dias de curso e já estou com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
     Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
     vocês são a parte fundamental para isso aqui tudo estar acontecendo #VQV! 
-    <hr>
 </article>
 <section id="aside"> 
+    <h2> O meu aprendizado</h2>
     Desde o dia 09 de Agosto eu já posso dizer com tranquilidade que seu usar Linux, hoje em dia uso o ubunto,
     consigo usar os comandos usando o Unix e Bash, sei como funciona os padrões e protocolos da Internet e consigo criar e estilizar uma página com a dupla HTML e CSS. Além de usar o GIT e o GITHUB para que todo o meu trabalho seja visto por todo mundo.
-    </section>
-
-
+</section>
 </div>
-<footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a Trybe    </footer>
+
+<footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a<em>Trybe</em></footer>
 
 </body>
