--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.<br> 
       Cum sociis natoque penatibus et magnis dis p</p>
     </aside>
+    <table>
+      <tr>
+        <th>Links</th>
+      </tr>
+      <tr>
+        <td><a href="https://www.w3schools.com/default.asp">W3 Schools</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://stackoverflow.com/">StackOverflow</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://unsplash.com/">Unsplash</a></td>
+      </tr>
+    </table>
     </main>
     <section>
     <nav><a target="_blank" href="https://www.linkedin.com/in/gabriel-augustoo/">Linkedin</a></nav>
