substitui os lorem

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 
   </nav>
   <article>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
-    molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit Lorem ipsum dolor sit
-    amet consectetur adipisicing elit. Ab, nobis, tenetur earuas 2312
+    O meu aprendizado na trybe está me ajudando muito em questões que nem eu sabia que precisava de ajuda, como por
+    exemplo as soft skills que sinceramente eu não sabia que era uma coisa.
+    todo mundo desde a staff até as pessoas estudantes são otimos sempre ajudando em todas as plataformas que a trybe
+    nos disponibiliza.
   </article>
   <section>
     <aside id="lado direito">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
-      consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
-      asperiores?
+      Estudar na Trybe está sendo um grande desafio parar mim, porem estou gostando muito da didatica e do jeito que
+      todo mundo tanto os instrutores quanto os alunos são prestativos.
     </aside>
   </section>
   <footer id="rodape">
